feat(defense): implement active technical guards (Section 2)
Establishes a multi-layered defense system as defined in the STRATO Playbook.

 - Fortifies and validates pre-commit hooks with ESLint and Prettier.

 - Integrates Vitest for unit testing and activates it in the CI pipeline.

 - Deploys the Runtime Defense System™ with audit scripts and artifacts structure.

 - Defines Autofix Agents for maintenance and future AI integration.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,14 @@
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   },
+  "overrides": [
+    {
+      "files": ["scripts/**/*.ts"],
+      "rules": {
+        "no-console": "off"
+      }
+    }
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -27,4 +35,4 @@
     "node": true,
     "es6": true
   }
-} 
+}
