--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@data": "echo 'AI Data Agent not implemented yet.'",
     "@refactor": "echo 'AI Refactor Agent not implemented yet.'",
     "@report:defense": "tsx scripts/report-strato-defense.ts",
+    "@clone:saas": "tsx scripts/create-saas-clone.ts",
     "prepare": "husky"
   },
   "keywords": [
@@ -30,6 +31,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.8",
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -37,7 +40,9 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
+    "inquirer": "^12.6.3",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
