feat(frontend): initialize Vite app and unify monorepo to ESM
This commit marks a major milestone in the project's foundation.

It introduces the 'frontend' application, scaffolded with Vite for a modern
development experience.

A significant part of this effort involved a deep refactoring of the entire
monorepo to unify under ES Modules (ESM). This strategic decision resolves a
cascade of configuration conflicts between TypeScript, Vitest, and Node.js,
resulting in a more robust, modern, and maintainable codebase.

Key changes include:
- Initializing the Vite application in the 'frontend' workspace.
- Migrating the existing TodoList feature into the new 'frontend' app.
- Setting '"type": "module"' in the root package.json.
- Simplifying TypeScript configuration to use a single, powerful root tsconfig.json.
- Centralizing core dependencies like React to prevent runtime errors.
- Achieving a 100% passing '@preflight-check' after all changes.

This concludes the foundational setup (Sections 1-6) and prepares the
'Core OS' for robust functional development (Section 7).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    /* Base Options: */
-    "esModuleInterop": true,
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
     "skipLibCheck": true,
-    "target": "es2022",
-    "allowJs": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force",
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
 
     /* Strictness */
     "strict": true,
@@ -22,26 +25,11 @@
     "alwaysStrict": true,
     "exactOptionalPropertyTypes": true,
 
-    /* If transpiling with TypeScript: */
-    "module": "NodeNext",
-    "outDir": "dist",
-    "sourceMap": true,
-
-    /* If NOT transpiling with TypeScript: */
-    "module": "preserve",
-    "noEmit": true,
-
     /* Linting */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-
-    /* If your code runs in the DOM: */
-    "lib": ["es2022", "dom", "dom.iterable"],
-    
-    /* JSX */
-    "jsx": "react-jsx"
+    "noImplicitReturns": true
   },
-  "exclude": ["node_modules", "dist"]
-}
+  "include": ["frontend/src", "packages/utils/src", "scripts"]
+} 
