--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "strato-core-os",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "description": "STRATO Core OS: A boilerplate for building resilient and scalable SaaS applications.",
   "author": "STRATO",
   "license": "MIT",
   "workspaces": [
     "packages/*",
+    "modules/*",
     "frontend",
     "backend",
     "agent"
@@ -45,6 +47,7 @@
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
@@ -61,6 +64,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "yargs": "^18.0.0"
   },
@@ -69,5 +73,9 @@
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
