--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@strato-core/utils",
+  "name": "@strato/utils",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
