feat(ui): implement shadcn components Button, Input, Card > > - Manually integrate shadcn/ui components Button, Input, and Card. > - Create components under frontend/src/components/ui/ following PLAYBOOK Section 7. > - Refactor TodoList to use the new components, removing inline styles. > - Ensure all changes pass @preflight-check validations. > > This completes the initial UI component foundation as per the playbook.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,5 +30,10 @@
   "env": {
     "node": true,
     "es6": true
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
   }
 }
