--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,5 +8,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.522.0",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "eslint-import-resolver-typescript": "^4.4.3"
+  }
 }
