feat(ai): setup @strato-ai/core package and openai client > > - Create a new workspace `@strato-ai/core` under `packages/ai`. > - Add `openai` as a dependency. > - Implement the initial OpenAI client configuration. > - Pass all `@preflight-check` validations. > > Establishes the foundation for the AI layer as per PLAYBOOK Section 8.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "author": "STRATO",
   "license": "MIT",
   "workspaces": [
-    "packages/*",
-    "modules/*",
     "frontend",
     "backend",
-    "agent"
+    "agent",
+    "packages/*"
   ],
   "scripts": {
     "test": "vitest run",
