--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,10 +1,17 @@
 {
   "name": "@strato-ai/core",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {},
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "openai": "^4.52.7"
+  },
+  "devDependencies": {},
+  "exports": {
+    ".": {
+      "types": "./src/index.ts"
+    }
+  }
 }
