--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "vitest run",
     "@validate:repo": "tsx scripts/validate-repo.ts",
     "@test:all": "vitest run --config ./vitest.config.ts",
+    "@test:e2e": "playwright test",
     "@status": "tsx scripts/report-status.ts",
     "@preflight-check": "npm run @validate:env && npm run @validate:repo && npm run @test:all",
     "@validate:env": "tsx scripts/validate-env.ts",
@@ -28,6 +29,7 @@
     "@report:defense": "tsx scripts/report-strato-defense.ts",
     "@clone:saas": "tsx scripts/create-saas-clone.ts",
     "@watch:fortress": "tsx scripts/night-watchman.ts",
+    "dev": "vite",
     "prepare": "husky"
   },
   "keywords": [
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@playwright/test": "^1.53.1",
     "@testing-library/react": "^16.3.0",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
@@ -72,8 +75,7 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4",
-    "yargs": "^18.0.0",
-    "zod": "^3.25.67"
+    "yargs": "^17.7.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -84,5 +86,6 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
-  }
+  },
+  "packageManager": "npm@10.7.0"
 }
