--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
