--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@repo/db-types": "workspace:*",
     "@supabase/supabase-js": "^2.50.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
