--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview",
-    "test": "vitest run",
+    "test": "vitest run src/",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
+    "msw": "^2.10.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
