chore(lint): remove stray js files and fix lint errors
This commit improves code quality and consistency.

- Deletes compiled JavaScript artifacts from the backend source.
- Configures ESLint for flat config in the frontend.
- Installs missing ESLint dependencies.
- Fixes all critical linting errors across the codebase.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "tsx ./src/server.ts",
     "build": "echo 'Build script not implemented yet'",
-    "test": "tsx src/tests/health.test.ts",
-    "lint": "eslint . --ext .ts"
+    "test": "tsx --import=./src/tests/setup.ts --test src/tests/health.test.ts",
+    "lint": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "@repo/db-types": "workspace:*",
