--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint . --fix",
     "preview": "vite preview",
-    "test": "vitest run src/",
-    "test:e2e": "playwright test"
+    "test": "vitest run src/"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -23,11 +22,15 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1",
     "vite": "^5.3.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
