fix(build): repair build scripts and resolve all dependencies
Resolves a multitude of issues preventing the project from building.

- Implements a  build script for the backend and fixes all TS errors.
- Corrects PostCSS config for Tailwind v4 and adds Vite path alias.
- Installs all missing peer dependencies for shadcn/ui components.
- undefined
 ERR_PNPM_RECURSIVE_EXEC_FIRST_FAIL  Command "build" not found and undefined
 ERR_PNPM_RECURSIVE_EXEC_FIRST_FAIL  Command "dev" not found are now functional for both workspaces.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,12 +1,14 @@
 {
-  "extends": "@repo/typescript-config/tsconfig.base.json",
+  "extends": "../../packages/typescript-config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmit": false,
+    "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
