--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "tsx ./src/server.ts",
-    "build": "echo 'Build script not implemented yet'",
+    "build": "tsc",
     "test": "tsx --import=./src/tests/setup.ts --test src/tests/health.test.ts",
     "lint": "eslint . --ext .ts --fix"
   },
@@ -24,6 +24,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@solana/wallet-standard-features": "^1.3.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
@@ -31,4 +32,4 @@
     "supertest": "^7.1.1",
     "tsx": "^4.20.3"
   }
-} 
+}
