refactor(lint): unify eslint and prettier configuration
Centralizes all ESLint and Prettier configuration to the monorepo root.

- Creates a single  as the source of truth.
- Removes redundant configurations from individual workspaces.
- Installs all necessary linting dependencies at the root level.
- Adds a unified  script to the root .
- Configures rules to support modern React (JSX transform) and TypeScript.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "tsx ./src/server.ts",
     "build": "tsc",
-    "test": "tsx --import=./src/tests/setup.ts --test src/tests/health.test.ts",
-    "lint": "eslint . --ext .ts --fix"
+    "test": "tsx --import=./src/tests/setup.ts --test src/tests/health.test.ts"
   },
   "dependencies": {
     "@repo/db-types": "workspace:*",
