--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --fix",
     "preview": "vite preview",
-    "test": "vitest run src/"
+    "test": "vitest run src/",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
