--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "packageManager": "pnpm@9.7.0",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "pnpm -r build",
+    "test": "pnpm -r test --no-bail",
+    "dev": "pnpm -r dev",
     "audit:full": "echo 'Audit script not implemented yet. This will run turbo lint, test, and build.'",
     "prepare": "husky",
     "db:new": "supabase migrations new",
