--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "tsx ./src/start.ts",
     "build": "tsc",
-    "test": "dotenv -e .env.test -- tsx --test src/tests/health.test.ts"
+    "test": "dotenv -e .env.test -- tsx --test src/tests/health.test.ts",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@repo/db-types": "workspace:*",
