feat(devops): 🛡️ activate and configure repository guardians
This commit activates and configures several key defense systems to enforce
code quality and repository standards automatically.

- ✨ Implemented 'audit:full' script to run lint, test, and build.
- 💄 Activated pre-commit hooks with husky and lint-staged.
- ⬆️ Updated turbo.json, renaming 'pipeline' to 'tasks' for v2 compatibility.
- 🐛 Fixed 'process is not defined' bug in backend via ESLint env config.
- ⚙️ Cleaned up linting errors across the backend automatically.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "license": "MIT",
   "packageManager": "pnpm@9.7.0",
   "scripts": {
-    "lint": "turbo run lint",
+    "lint": "turbo lint && pnpm-sync-up-eslint-formatter",
     "build": "turbo run build",
-    "test": "turbo run test",
+    "test": "turbo test",
+    "test:watch": "turbo test:watch",
     "dev": "turbo run dev --parallel",
-    "audit:full": "echo 'Audit script not implemented yet. This will run turbo lint, test, and build.'",
+    "audit:full": "turbo lint && turbo test && turbo build",
     "prepare": "husky",
     "db:new": "supabase migrations new",
     "db:push": "supabase db push --db-url \"postgresql://postgres:postgres@127.0.0.1:54322/postgres\"",
