build(tsconfig): ⚙️ Centralize and fix path aliases
- Creates a root tsconfig.json for monorepo path aliases.

- Refactors frontend and backend tsconfigs to extend the root config.

- Resolves path warnings and improves TS configuration maintainability.

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,12 +1,13 @@
 {
-  "extends": "@repo/typescript-config/tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts", "src/tests/setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
