--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../packages/typescript-config/tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
