feat(testing): 🧪 Enhance test configuration and coverage
- Improves test setup for frontend and utils packages.

- Adds test coverage reporting with @vitest/coverage-v8.

- Updates .gitignore to exclude build and cache artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,19 @@ junit.xml
 
 # Misc
 .npm/
-.eslintcache 
+.eslintcache
+
+# testing
+/coverage
+/playwright-report/
+/test-results/
+
+# turbo
+.turbo
+.next
+.output
+.vercel
+/build
+/dist
+.svelte-kit
+.netlify
