--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,13 +6,14 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "test": "echo 'No tests in @strato/utils'"
+    "test": "vitest run --coverage"
   },
   "keywords": [
     "utils",
     "strato"
   ],
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.4",
     "vitest": "^3.2.4"
   }
 }
