--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:watch": "turbo test:watch",
     "dev": "turbo run dev --parallel",
     "audit:full": "turbo lint && turbo test && turbo build",
+    "audit:core": "tsx scripts/audit/generate-core-audit.ts",
+    "audit:global": "tsx scripts/audit/audit-global.ts",
+    "audit:deps": "tsx scripts/audit/audit-dependencies.ts",
     "prepare": "husky",
     "db:new": "supabase migrations new",
     "db:push": "supabase db push --db-url \"postgresql://postgres:postgres@127.0.0.1:54322/postgres\"",
@@ -28,13 +31,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@types/glob": "^8.1.0",
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "chalk": "^5.4.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
@@ -42,7 +48,9 @@
     "supabase": "^2.26.9",
     "tsx": "^4.20.3",
     "turbo": "^2.5.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": "eslint --fix"
