--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,8 +12,5 @@
     "utils",
     "strato"
   ],
-  "devDependencies": {
-    "@vitest/coverage-v8": "^3.2.4",
-    "vitest": "^3.2.4"
-  }
+  "devDependencies": {}
 }
