fix(backend): resolve server startup issues
- Add tsconfig.json to ensure proper TypeScript compilation
- Use dotenv-cli in dev script to load vars from root .env
- Set NODE_ENV=development in dev script to prevent errors
- Remove manual dotenv handling from config service

This resolves persistent server startup failures.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "tsx ./src/start.ts",
+    "dev": "NODE_ENV=development dotenv -e ../../.env -- tsx ./src/start.ts",
     "build": "tsc",
     "test": "dotenv -e .env.test -- tsx --test src/tests/health.test.ts",
     "lint": "eslint ."
