--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
