chore(manifest): permite tsconfig.json en la raíz y numera docs .md para fácil acceso

--- a/.strato-manifest.json
+++ b/.strato-manifest.json
@@ -17,7 +17,8 @@
     "agent/**",
     "modules/**",
     "audit-artifacts/**",
-    "public/**"
+    "public/**",
+    "tsconfig.json"
   ],
   "forbiddenPaths": [
     "node_modules/**",
