--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -21,5 +21,10 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": [
+    "node_modules",
+    "../../node_modules/next/**",
+    "../../node_modules/next/types/**"
+  ]
 } 
