--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
+    "@types/inquirer": "^9.0.8",
     "@types/node": "^24.0.3",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitest/coverage-v8": "^3.2.4",
