--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Run ESLint
         run: npx eslint . --ext .ts,.tsx
 
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Run TypeScript Compiler
         run: npx tsc --noEmit
 
