--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@repo/typescript-config/*": ["packages/typescript-config/*"]
-    }
-  }
-}
+  "extends": "./tsconfig.base.json"
+} 
