refactor(backend): migración completa de users a profiles con defensa de tipos y rutas protegidas
- Renombrado y refactorizado controller, service y rutas de users a profiles.
- Creada tabla profiles en Supabase (relación 1:1 con auth.users).
- Ajustados schemas, lógica y tests E2E para /profiles/me.
- Backend 100% type-safe, build y tests limpios.
- Manifest actualizado para permitir supabase/** como ruta válida.

--- a/.strato-manifest.json
+++ b/.strato-manifest.json
@@ -21,7 +21,8 @@
     "tsconfig.json",
     "*.sh",
     "apps/**/.eslintignore",
-    "packages/**/.eslintignore"
+    "packages/**/.eslintignore",
+    "supabase/**"
   ],
   "forbiddenPaths": [
     "node_modules/**",
