--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
     "@types/inquirer": "^9.0.8",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
+    "@types/uuid": "^10.0.0",
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -49,6 +51,7 @@
     "glob": "^11.0.3",
     "globby": "^14.1.0",
     "husky": "^9.1.7",
+    "jsonwebtoken": "^9.0.2",
     "lint-staged": "^16.1.2",
     "minimatch": "^10.0.3",
     "prettier": "^3.5.3",
@@ -57,10 +60,14 @@
     "tsx": "^4.20.3",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
     "vitest": "^3.2.4",
     "zod": "^3.25.67"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": "eslint --fix"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.50.0"
   }
 }
