--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
     "test:ui": "vitest run"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@playwright/test": "^1.53.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@testing-library/react": "^16.3.0",
@@ -21,6 +23,7 @@
     "next": "15.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
