--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
     "globby": "^14.1.0",
     "husky": "^9.1.7",
