--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "supabase": "^2.26.9",
+    "ts-morph": "^26.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "turbo": "^2.5.4",
