chore(tests): workaround STRATO Context Guard, mueve tests backend a packages/utils/tests y limpia tipos

--- a/.strato-manifest.json
+++ b/.strato-manifest.json
@@ -14,7 +14,8 @@
     "agent",
     "packages/utils",
     ".",
-    "audit-artifacts"
+    "audit-artifacts",
+    "apps/backend/src/tests"
   ],
   "forbiddenPaths": [
     "node_modules",
