--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
     "noEmit": false
   },
-  "include": ["src", "src/types"],
+  "include": ["src", "src/types", "tests"],
   "exclude": ["node_modules"]
 } 
