--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,8 +27,10 @@
     "@solana/wallet-standard-features": "^1.3.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
+    "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
     "dotenv-cli": "^8.0.0",
+    "pg": "^8.16.2",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
     "tsx": "^4.20.3"
