chore(context-guard): estructura y documentación viva alineadas, sin archivos bloqueados

--- a/.strato-manifest.json
+++ b/.strato-manifest.json
@@ -9,19 +9,29 @@
   "createdAt": "2024-06-22T00:00:00.000Z",
   "root": ".",
   "validPaths": [
-    "apps/frontend",
-    "apps/backend",
-    "agent",
-    "packages/utils",
-    ".",
-    "audit-artifacts",
-    "apps/backend/src/tests"
+    "apps/frontend/**",
+    "apps/backend/**",
+    "apps/web/**",
+    "agent/**",
+    "packages/utils/**",
+    "audit-artifacts/**",
+    ".github/**",
+    ".husky/**",
+    ".turbo/**",
+    ".idea/**",
+    "prompts/**",
+    "scripts/**",
+    "*.md",
+    "*.json",
+    "*.js",
+    "*.cjs",
+    "*.ts",
+    ".strato-manifest.json"
   ],
   "forbiddenPaths": [
-    "node_modules",
-    ".tmp-scripts",
-    "dist",
-    "build"
+    "node_modules/**",
+    "dist/**",
+    "build/**"
   ],
   "namingConventions": {
     "files": "kebab-case",
