--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -40,5 +41,6 @@
     "tailwindcss": "^4.1.10",
     "typescript": "^5",
     "vitest": "^3.2.4"
-  }
+  },
+  "type": "module"
 }
