--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest run --coverage",
+    "test": "vitest run --coverage --exclude=tests-e2e/**",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -34,9 +34,11 @@
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.2",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.34.1",
+    "whatwg-fetch": "^3.6.20"
   }
 }
