chore: limpieza de archivos y cierre de sesión de trabajo

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_ENV=development dotenv -e ../../.env -- tsx ./src/start.ts",
     "build": "tsc",
-    "test": "dotenv -e .env.test -- vitest run",
+    "test": "dotenv -e ../../.env.test -- vitest run",
     "lint": "eslint ."
   },
   "dependencies": {
