refactor(frontend): migración Next.js, cleanup SPA, variables entorno, estructura /app, symlink .env

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "*.{js,jsx,ts,tsx,json}": "eslint --fix"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.50.0"
+    "@supabase/supabase-js": "^2.50.0",
+    "supertest": "^7.1.1"
   }
 }
